--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -5,24 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main>
+    <section id="QR-Card">
+      <figure id="QR-Card--figure">
+        <img alt="Provided image by Frontend Mentor Projects of a qr code to be scanned." src="./images/image-qr-code.png" />
+      </figure>
 
-  Improve your front-end skills by building projects
+      <div id="QR-Card--description">
+        <h2 class="text-center">Improve your front-end skills by building projects</h2>
+        <p class="text-center">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      </div>
+    </section>
+  </main>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
+  <footer class="attribution text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Bogdan-Mircea Radu</a>.
+  </footer>
 </body>
 </html>
