--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -14,20 +14,36 @@
   <title>Frontend Mentor | Product preview card component</title>
 </head>
 <body>
+  <main>
+    <section id="Product-Cards">
+      <article class="product-card">
+        <figure class="product-card--image">
+          <div role="img"></div>
+        </figure>
 
-  Preview
+        <div class="product-card--details">
+          <p class="product-card--details-type text-uppercase">perfume</p>
 
-  Gabrielle Essence Eau De Parfum
+          <h2>Gabrielle Essence Eau De Parfum</h2>
+          <p class="product-card--details-caption">A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+            Perfumer-Creator for the House of <span class="text-uppercase">chanel</span>.
+          </p>
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+          <div class="product-card--details-price">
+            <h2>$149.99</h2>
+            <p class="text-striked">$169.99</p>
+          </div>
 
-  $149.99
-  $169.99
-
-  Add to Cart
+          <button>
+            <span></span>
+            Add to Cart
+          </button>
+        </div>
+      </article>
+    </section>
+  </main>
   
-  <footer class="attribution">
+  <footer class="attribution text-center">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Bogdan-Mircea Radu</a>.
   </footer>
