--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -34,8 +34,10 @@
             <p class="text-striked">$169.99</p>
           </div>
 
-          <button>
-            <span></span>
+          <button class="font-bold">
+            <span>
+              <img src="./images/icon-cart.svg" />
+            </span>
             Add to Cart
           </button>
         </div>
