--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -7,17 +7,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive rating component</title>
-
+  <link rel="stylesheet" href="styles.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
   <!-- Rating state start -->
-
+<!-- 
   How did we do?
 
   Please let us know how we did with your support request. All feedback is appreciated 
@@ -25,25 +21,65 @@
 
   1 2 3 4 5
 
-  Submit
+  Submit -->
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
+  <!-- You selected Add rating here out of 5
 
   Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
+  <main>
+    <section id="Review">
+      <div id="Review-Modal">
+        <div id="Review-Modal--icon">
+          <img src="./images/icon-star.svg" />
+        </div>
 
+        <div id="Review-Modal--body">
+          <h2>How did we do?</h2>
+
+          <p>
+            Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+          </p>
+
+          <div id="Review-Modal--body-rating">
+            <ul>
+              <li class="rating-select">
+                1
+              </li>
+              <li class="rating-select">
+                2
+              </li>
+              <li class="rating-select">
+                3
+              </li>
+              <li class="rating-select">
+                4
+              </li>
+              <li class="rating-select">
+                5
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <button class="text-uppercase">submit</button>
+      </div>
+    </section>
+  </main>
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
