initial back card + javascript

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -51,19 +51,19 @@
 
           <div id="Review-Modal--body-rating">
             <ul>
-              <li class="rating-select">
+              <li class="rating-select" data-rating="1">
                 1
               </li>
-              <li class="rating-select">
+              <li class="rating-select" data-rating="2">
                 2
               </li>
-              <li class="rating-select">
+              <li class="rating-select" data-rating="3">
                 3
               </li>
-              <li class="rating-select">
+              <li class="rating-select" data-rating="4">
                 4
               </li>
-              <li class="rating-select">
+              <li class="rating-select" data-rating="5">
                 5
               </li>
             </ul>
@@ -71,6 +71,22 @@
         </div>
 
         <button class="text-uppercase">submit</button>
+      </div>
+
+      <div id="Review-Result">
+        <div id="Review-Result--icon">
+          <img src="./images/illustration-thank-you.svg" />
+        </div>
+
+        <div id="Review-Result--content">
+          <div>
+            <p>dsadadadsadsadasdaad</p>
+          </div>
+          <h2>Thank you!</h2>
+          <p>
+            We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!
+          </p>
+        </div>
       </div>
     </section>
   </main>
