button + rating transition hover

--- a/interactive-rating-component-main/index.html
+++ b/interactive-rating-component-main/index.html
@@ -98,6 +98,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </footer>
 
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 </html>
