--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -16,36 +16,36 @@
   <main>
     <section id="Profile-Cards">
       <article class="profile-card">
-        <div class="profile-card--bg">
-          <img src="./images/bg-pattern-card.svg" alt="Profile card aqua background image with bubble pattern." />
-        </div>
+        <div class="profile-card--bg"></div>
 
         <div class="profile-card--content">
-          <figure>
-            <img src="./images/image-victor.jpg" alt="Profile image for user named Victor Crest" />
+          <div class="profile-card--content--profile-image">
+            <span>
+              <img src="./images/image-victor.jpg" alt="Profile image for user named Victor Crest" />
+            </span>
+          </div>
+          <div class="profile-card--content--info">
+            <div>
+              <h3>victor crest</h3>
+              <span>26</span>
+            </div>
 
-            <figcaption>
-              <div>
-                <h3>victor crest</h3>
-                <p>26</p>
-              </div>
-              <div>london</div>
-            </figcaption>
-          </figure>
+            <div>london</div>
+          </div>
 
           <div class="profile-card--content--media-numbers">
             <div>
-              <h2>80k</h2>
+              <h3>80k</h3>
               <p>followers</p>
             </div>
 
             <div>
-              <h2>803k</h2>
+              <h3>803k</h3>
               <p>likes</p>
             </div>
 
             <div>
-              <h2>1.4k</h2>
+              <h3>1.4k</h3>
               <p>photos</p>
             </div>
           </div>
