adaugat bilele de fundal

--- a/profile-card-component-main/index.html
+++ b/profile-card-component-main/index.html
@@ -14,6 +14,13 @@
 </head>
 <body>
   <main>
+    <div id="top-ball">
+      <img src="./images/bg-pattern-top.svg" alt="Background svg image for top left corner.">
+    </div>
+    <div id="bottom-ball">
+      <img src="./images/bg-pattern-bottom.svg" alt="Background svg image for bottom right corner.">
+    </div>
+
     <section id="Profile-Cards">
       <article class="profile-card">
         <div class="profile-card--bg"></div>
