--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -5,29 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Stats preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main>
+    <section id="Stats-Preview">
+      <div id="Stats-Preview--image-banner">
+        <img src="./images/image-header-mobile.jpg" />
+      </div>
+      <div id="Stats-Preview--text-content">
+        <h2>Get <span class="color-accent">insights</span> that help your business grow.</h2>
+        <p>
+          Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.
+        </p>
 
-  Get insights that help your business grow.
+        <div id="Stats-Preview--text-content--numbers">
+          <div>
+            <h3>10k+</h3>
+            <p class="text-uppercase">companies</p>
+          </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
+          <div>
+            <h3>314</h3>
+            <p class="text-uppercase">templates</p>
+          </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
-
-  <div class="attribution">
+          <div>
+            <h3>12M+</h3>
+            <p class="text-uppercase">queries</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Bogdan-Mircea Radu</a>.
+  </footer>
 </body>
 </html>
