initial css mobile styling

--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -16,6 +16,7 @@
     <section id="Stats-Preview">
       <div id="Stats-Preview--image-banner">
         <img src="./images/image-header-mobile.jpg" />
+        <div id="Stats-Preview--image-banner--tint"></div>
       </div>
       <div id="Stats-Preview--text-content">
         <h2>Get <span class="color-accent">insights</span> that help your business grow.</h2>
