--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -38,8 +38,10 @@
             <a href="#" class="text-capitalize text-bold">change</a>
           </div>
 
-          <button class="text-capitalize text-bolder">proceed to payment</button>
-          <button class="text-capitalize text-bolder">cancel order</button>
+          <div id="Order-Summary--Card--Contents--Actions">
+            <button class="text-capitalize text-bolder">proceed to payment</button>
+            <button class="text-capitalize text-bolder">cancel order</button>
+          </div>
         </div>
       </article>
     </section>
