--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -21,25 +21,27 @@
         </div>
 
         <div id="Order-Summary--Card--Contents">
-          <h2 class="text-capitalize">order summary</h2>
+          <h2 class="text-capitalize text-centered default-margin-bottom">order summary</h2>
 
-          <p>
+          <p class="text-centered default-margin-bottom">
             You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
           </p>
 
-          <div id="Order-Summary--Card--Contents--Chosen-Plan">
-            <img src="./images/icon-music.svg" alt="">
+          <div id="Order-Summary--Card--Contents--Chosen-Plan" class="default-margin-bottom">
+            <div id="Order-Summary--Card--Contents--Chosen-Plan--Summary">
+              <img src="./images/icon-music.svg" alt="">
 
-            <div>
-              <h4 class="text-capitalize">anual plan</h4>
-              <p>$59.99/year</p>
+              <div>
+                <h4 class="text-capitalize">anual plan</h4>
+                <p>$59.99/year</p>
+              </div>
             </div>
-
+            
             <a href="#" class="text-capitalize text-bold">change</a>
           </div>
 
           <div id="Order-Summary--Card--Contents--Actions">
-            <button class="text-capitalize text-bolder">proceed to payment</button>
+            <button class="text-capitalize text-bolder default-margin-bottom">proceed to payment</button>
             <button class="text-capitalize text-bolder">cancel order</button>
           </div>
         </div>
