bg image + border helper class

--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <section id="Order-Summary">
-      <article id="Order-Summary--Card">
+      <article id="Order-Summary--Card" class="border-radius-big">
         <div id="Order-Summary--Card--Illustration">
           <img src="./images/illustration-hero.svg" alt="Image, with blue background over city, of a person dancing while listening to music on headphones attached to a mobile phone.">
         </div>
@@ -27,7 +27,7 @@
             You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!
           </p>
 
-          <div id="Order-Summary--Card--Contents--Chosen-Plan" class="default-margin-bottom">
+          <div id="Order-Summary--Card--Contents--Chosen-Plan" class="default-margin-bottom border-radius-small">
             <div id="Order-Summary--Card--Contents--Chosen-Plan--Summary">
               <img src="./images/icon-music.svg" alt="">
 
@@ -41,7 +41,7 @@
           </div>
 
           <div id="Order-Summary--Card--Contents--Actions">
-            <button class="text-capitalize text-bolder default-margin-bottom">proceed to payment</button>
+            <button class="text-capitalize text-bolder default-margin-bottom border-radius-small">proceed to payment</button>
             <button class="text-capitalize text-bolder">cancel order</button>
           </div>
         </div>
