--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -8,11 +8,7 @@
   
   <title>Frontend Mentor | NFT preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -24,10 +20,41 @@
   3 days left
   
   Creation of Jules Wyvern
+  <main>
+    <section id="Nft-Cards">
+      <article class="nft-card">
+        <div class="nft-card--image">
+          <img src="./images/image-equilibrium.jpg" alt="NFT of an image with a blue to dark blue gradient, containing a glass looking cube reflecting different shades of red and blue.">
+        </div>
 
-  <div class="attribution">
+        <div class="nft-card--description">
+          <h2 class="text-white">Equilibrium #3429</h2>
+
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+
+          <div class="nft-card--description--value-and-time">
+            <div class="nft-card--description--value">
+              <img src="./images/icon-ethereum.svg" alt="Etherium icon">
+              <p class="text-accent text-bold">0.041 eth</p>
+            </div>
+
+            <div class="nft-card--description--time">
+              <img src="./images/icon-clock.svg" alt="">
+              <p>3 days left</p>
+            </div>
+          </div>
+
+          <div class="nft-card--creator">
+            <img src="./images/image-avatar.png" alt="">
+            <p class="text-slim">Creation of <span class="text-capitalize text-white">jules wyvern</span></p>
+          </div>
+        </div>
+      </article>
+    </section>
+  </main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
 </body>
 </html>
