--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -7,19 +7,12 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | NFT preview card component</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
   <main>
     <section id="Nft-Cards">
       <article class="nft-card">
@@ -28,14 +21,16 @@
         </div>
 
         <div class="nft-card--description">
-          <h2 class="text-white">Equilibrium #3429</h2>
+          <a href="#">
+            <h2 class="text-white">Equilibrium #3429</h2>
+          </a>
 
-          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <p class="text-slim">Our Equilibrium collection promotes balance and calm.</p>
 
           <div class="nft-card--description--value-and-time">
             <div class="nft-card--description--value">
               <img src="./images/icon-ethereum.svg" alt="Etherium icon">
-              <p class="text-accent text-bold">0.041 eth</p>
+              <p class="text-accent text-bold text-uppercase">0.041 eth</p>
             </div>
 
             <div class="nft-card--description--time">
@@ -45,8 +40,10 @@
           </div>
 
           <div class="nft-card--creator">
-            <img src="./images/image-avatar.png" alt="">
-            <p class="text-slim">Creation of <span class="text-capitalize text-white">jules wyvern</span></p>
+            <div>
+              <img src="./images/image-avatar.png" alt="">
+            </div>
+            <p class="text-slim">Creation of <a href="#" class="text-capitalize text-white">jules wyvern</a></p>
           </div>
         </div>
       </article>
