--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -17,7 +17,9 @@
     <section id="Nft-Cards">
       <article class="nft-card">
         <div class="nft-card--image">
-          <img src="./images/image-equilibrium.jpg" alt="NFT of an image with a blue to dark blue gradient, containing a glass looking cube reflecting different shades of red and blue.">
+          <a href="#">
+            <img src="./images/image-equilibrium.jpg" alt="NFT of an image with a blue to dark blue gradient, containing a glass looking cube reflecting different shades of red and blue.">
+          </a>
         </div>
 
         <div class="nft-card--description">
@@ -29,12 +31,12 @@
 
           <div class="nft-card--description--value-and-time">
             <div class="nft-card--description--value">
-              <img src="./images/icon-ethereum.svg" alt="Etherium icon">
+              <div><img src="./images/icon-ethereum.svg" alt="Etherium icon"></div>
               <p class="text-accent text-bold text-uppercase">0.041 eth</p>
             </div>
 
             <div class="nft-card--description--time">
-              <img src="./images/icon-clock.svg" alt="">
+              <div><img src="./images/icon-clock.svg" alt=""></div>
               <p>3 days left</p>
             </div>
           </div>
